src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/GLDebugMessageARBCallback_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/GLDebugMessageARBCallback_StringErrorContext.class */
public final class GLDebugMessageARBCallback_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("create(J)Lorg/lwjgl/opengl/GLDebugMessageARBCallback;", "net/labymod/core/laby3d/opengl/error/generated/GLDebugMessageARBCallbackErrorContext");
        methods.put("createSafe(J)Lorg/lwjgl/opengl/GLDebugMessageARBCallback;", "net/labymod/core/laby3d/opengl/error/generated/GLDebugMessageARBCallbackErrorContext");
        methods.put("create(Lorg/lwjgl/opengl/GLDebugMessageARBCallbackI;)Lorg/lwjgl/opengl/GLDebugMessageARBCallback;", "net/labymod/core/laby3d/opengl/error/generated/GLDebugMessageARBCallbackErrorContext");
        methods.put("getMessage(IJ)Ljava/lang/String;", "net/labymod/core/laby3d/opengl/error/generated/GLDebugMessageARBCallbackErrorContext");
        return methods;
    }
}
